<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ac.ems.ambulance.terrapinems.activity.TravelToIncidentActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|top"
        android:background="@drawable/ambulance2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/ambulanceLayout2">

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ambulanceLayout2">

        <Space
            android:layout_width="20dp"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/incident_header_text"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incident_button_text"
            android:id="@+id/incidentButton"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:padding="25dp"
            android:background="#1f4bea"
            android:minWidth="1000dp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onsite_button_text"
            android:id="@+id/onSiteButton"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:padding="25dp"
            android:background="#1f4bea"
            android:minWidth="1000dp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="25dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text"
            android:id="@+id/cancelResponseButton"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:padding="25dp"
            android:minWidth="1000dp"
            android:background="#e20101" />
    </LinearLayout>

</RelativeLayout>
