<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="ac.ems.ambulance.terrapinems.activity.AcceptDispatchActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Dispatch Assignment Details for Dispatch XX"
        android:id="@+id/headerText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_alignBottom="@+id/headerText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerText"
        android:id="@+id/labelLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/patient_name_label"
            android:id="@+id/textView2"
            android:textSize="30sp"
            android:layout_gravity="right" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/patient_address_label"
            android:id="@+id/textView3"
            android:textSize="30sp"
            android:layout_gravity="right" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/patient_info_label"
            android:id="@+id/textView4"
            android:layout_gravity="right"
            android:textSize="30sp" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/patient_severity_label"
            android:id="@+id/textView5"
            android:layout_gravity="right"
            android:textSize="30sp"
            android:gravity="end" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/reported_by_label"
            android:id="@+id/textView7"
            android:layout_gravity="right"
            android:textSize="30sp" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/patient_complaint_label"
            android:id="@+id/textView6"
            android:textSize="30sp"
            android:layout_gravity="right"
            android:gravity="end" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerText"
        android:layout_toRightOf="@+id/labelLayout"
        android:layout_toEndOf="@+id/labelLayout"
        android:id="@+id/valueLayout"
        android:layout_marginTop="20dp">

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Name Placeholder"
            android:id="@+id/nameTextView"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Address Placeholder"
            android:id="@+id/addressTextView"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Demographics Placeholder"
            android:id="@+id/demoTextView"
            android:textStyle="bold"
            android:textSize="30sp" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Severity Placeholder"
            android:id="@+id/severityTextView"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Reporter Placeholder"
            android:id="@+id/reportedTextView"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Complaint Placeholder"
            android:id="@+id/complaintTextView"
            android:textStyle="bold"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/acceptButton"
        android:layout_alignRight="@+id/labelLayout"
        android:layout_alignEnd="@+id/labelLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/recommend_hospital_label"
            android:id="@+id/textView9"
            android:textSize="30sp"
            android:textAlignment="textEnd"
            android:layout_marginBottom="20dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/acceptButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/valueLayout"
        android:layout_alignStart="@+id/valueLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Hospital Name Placeholder"
            android:id="@+id/hospitalNameTextView"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginBottom="20dp" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_dispatch_button"
        android:id="@+id/acceptButton"
        android:textSize="40sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#1f4bea"
        android:padding="10dp"
        android:paddingEnd="100dp"
        android:paddingStart="100dp"
        android:elegantTextHeight="false" />

</RelativeLayout>
